--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <base href="https://dicimulator.firebaseapp.com/">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
@@ -22,10 +23,25 @@
         </div>
         <div id="lowerContainer">
             <div id="imgContainer">
-                
+
             </div>
         </div>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyCexgJT2bLoED1jfukE_ZfQdyLWv9MPSNk",
+            authDomain: "dicimulator.firebaseapp.com",
+            databaseURL: "https://dicimulator.firebaseio.com",
+            projectId: "dicimulator",
+            storageBucket: "dicimulator.appspot.com",
+            messagingSenderId: "222902799848"
+        };
+        firebase.initializeApp(config);
+    </script>
     <script src="die.js"></script>
     <script src="dice.js"></script>
     <script src="main.js"></script>
