--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <div id="cfgDiv">
                 <div id="inputContainer">
                     <label for="numOfDice">Number of dice:</label>
-                    <input id="numOfDice" name="numOfDice" type="number" min="1" max="10" value="1" oninput="" />
+                    <input id="numOfDice" name="numOfDice" type="number" min="1" max="10" value="1" oninput="" onkeydown="return false" />
                 </div>
             </div>
         </div>
