added stats. will add roll history panel too

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <base href="https://dicimulator1.firebaseapp.com/">
+    <!-- <base href="https://dicimulator1.firebaseapp.com/"> -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dicimulator</title>
@@ -22,12 +22,15 @@
             </div>
         </div>
         <div id="lowerContainer">
+            <div id="statsContainer">
+                
+            </div>
             <div id="imgContainer">
 
             </div>
         </div>
     </div>
-
+<!-- 
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
     <script>
@@ -41,7 +44,7 @@
         messagingSenderId: "6689023509"
       };
       firebase.initializeApp(config);
-    </script>
+    </script> -->
     <script src="die.js"></script>
     <script src="dice.js"></script>
     <script src="main.js"></script>
